# cnv-perf

./: .gitignore  README.md  main.py  patch.json  pyproject.toml
commands/: cli_command.py  openshift_api.py  openshift_oc.py  tests.py  virtctl.py
tests/: test_import.py
utilities/: bash.py  files_access.py  oc.py
utilities/manifests/: NodeNetworkConfigurationPolicy.json  NodeNetworkConfigurationPolicyWithVLAN.json  cirros.json  clone-pvc.json  clone-vm.json  customKubeletConfig.json  debug-pod.json  maxPod.json  namespace.json  perf_param.json  set_pvc_interface.json  sshKeySecret.json
