[tool.poetry]
name = "cnv-perf"
version = "0.1.0"
description = ""
authors = ["Guy Chen <guchen@redhat.com>"]
readme = "README.md"
packages = [{ include = "cnv_perf" }]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
paramiko = "^3.2.0"
kubernetes = "^27.2.0"
openshift = "^0.13.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

